--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
+azure-core==1.35.0
+azure-storage-blob==12.26.0
 bcrypt==4.3.0
 certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.7
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
@@ -17,16 +23,20 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.10.0
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+openai==1.106.1
 orjson==3.11.3
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
@@ -36,6 +46,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.5
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.6.4
@@ -47,6 +58,7 @@ sniffio==1.3.1
 sqladmin==0.21.0
 SQLAlchemy==2.0.43
 starlette==0.47.3
+tqdm==4.67.1
 typer==0.17.4
 typing-inspection==0.4.1
 typing_extensions==4.15.0
