--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,11 +6,11 @@ on:
       - main  # Trigger this workflow on every push to the main branch
 
 env:
-  RESOURCE_GROUP: 'jobcard_rg' # Choose a name for your resource group
-  LOCATION: 'uaenorth'             # Choose the Azure region closest to you
-  ACR_NAME: 'jobcardacr'       # Choose a unique name for your container registry
-  CONTAINER_APP_ENV: 'jobcard-env' # Name for the container app environment
-  CONTAINER_APP_NAME: 'jobcard-app'  # Name for your final application
+  RESOURCE_GROUP: 'jobcard_rg' 
+  LOCATION: 'uaenorth'
+  ACR_NAME: 'jobcardacr'
+  CONTAINER_APP_ENV: 'jobcard-env'
+  CONTAINER_APP_NAME: 'jobcard-app'
 
 jobs:
   build-and-deploy:
@@ -18,15 +18,17 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      # UPDATED: Using the latest stable version
+      uses: actions/checkout@v4
 
     - name: 'Az CLI login'
-      uses: azure/login@v1
+      # UPDATED: Using the latest stable version
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: 'Build and push image'
-      uses: azure/docker-login@v1
+      uses: azure/docker-login@v1 # This action is still commonly on v1
       with:
         login-server: ${{ env.ACR_NAME }}.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
@@ -36,7 +38,8 @@ jobs:
         docker push ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
 
     - name: 'Deploy to Azure Container Apps'
-      uses: azure/container-apps-deploy@v1
+      # UPDATED: Using the latest stable version, which is the fix
+      uses: azure/container-apps-deploy@v3
       with:
         resourceGroup: ${{ env.RESOURCE_GROUP }}
         location: ${{ env.LOCATION }}
@@ -45,7 +48,7 @@ jobs:
         containerAppName: ${{ env.CONTAINER_APP_NAME }}
         imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
         targetPort: 8000
-        ingress: 'external' # Make the app accessible from the internet
+        ingress: 'external'
         environmentVariables: |
           DATABASE_URL=${{ secrets.DATABASE_URL }}
           SECRET_KEY=${{ secrets.SECRET_KEY }}
