--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,57 @@
-- name: Deploy to Azure Container Apps
-  uses: Azure/container-apps-deploy-action@v2
-  with:
-    resourceGroup: ${{ env.RESOURCE_GROUP }}
-    location: ${{ env.LOCATION }}
-    acrName: ${{ env.ACR_NAME }}
-    containerAppEnvironment: ${{ env.CONTAINER_APP_ENV }}
-    containerAppName: ${{ env.CONTAINER_APP_NAME }}
-    imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
-    targetPort: 8000
-    ingress: external
+name: Build and Deploy to Azure Container Apps
 
-    # Push values into ACA secrets
-    secrets: |
-      DATABASE_URL=${{ secrets.DATABASE_URL }}
-      SECRET_KEY=${{ secrets.SECRET_KEY }}
-      AZURE_STORAGE_CONNECTION_STRING=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
-      OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+on:
+  push:
+    branches:
+      - main  # Trigger this workflow on every push to the main branch
 
-    # Expose them to the container via secret references
-    environmentVariables: |
-      DATABASE_URL=secretref:DATABASE_URL
-      SECRET_KEY=secretref:SECRET_KEY
-      AZURE_STORAGE_CONNECTION_STRING=secretref:AZURE_STORAGE_CONNECTION_STRING
-      OPENAI_API_KEY=secretref:OPENAI_API_KEY
+env:
+  RESOURCE_GROUP: 'jobcard_rg' 
+  LOCATION: 'uaenorth'
+  ACR_NAME: 'jobcardacr'
+  CONTAINER_APP_ENV: 'jobcard-env'
+  CONTAINER_APP_NAME: 'jobcard-app'
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: 'Az CLI login'
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Build and push image'
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.ACR_NAME }}.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+    - run: |
+        docker build . -t ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
+        docker push ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
+
+    - name: 'Deploy to Azure Container Apps'
+      # --- THIS IS THE DEFINITIVE FIX ---
+      # Using the official and correct action name and version
+      uses: azure/container-apps-deploy-action@v1
+      with:
+        resourceGroup: ${{ env.RESOURCE_GROUP }}
+        containerAppName: ${{ env.CONTAINER_APP_NAME }}
+        imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/metamorphic-job-card:${{ github.sha }}
+        
+        secrets: |
+          database-url ${{ secrets.DATABASE_URL }}
+          secret-key ${{ secrets.SECRET_KEY }}
+          azure-storage-connection-string ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+          openai-api-key ${{ secrets.OPENAI_API_KEY }}
+        
+        environmentVariables: |
+          DATABASE_URL=secretref:database-url
+          SECRET_KEY=secretref:secret-key
+          AZURE_STORAGE_CONNECTION_STRING=secretref:azure-storage-connection-string
+          OPENAI_API_KEY=secretref:openai-api-key
