--- a/requirements.txt
+++ b/requirements.txt
@@ -70,3 +70,6 @@ uvicorn==0.35.0
 watchfiles==1.1.0
 websockets==15.0.1
 WTForms==3.1.2
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
