--- a/app/config.yaml
+++ b/app/config.yaml
@@ -23,6 +23,7 @@ assigned_crew_options:
   - Internal
   - External Vendor
   - External Skilled Labor
+  - Internal & External
 
 # --- Form B Specific ---
 equipment_conditions:
